--- a/download/index.html
+++ b/download/index.html
@@ -25,9 +25,9 @@
 				<div class="download-page p-0 m-0"><p><i>Description:</i> This build includes all updates until September 27, 2023 inclusive.</p></div>
 				<div class="download-page p-0 m-0"><p><i>Date of download:</i> 09.29.2023 21:20</p></div>
 			</div>
-			<div class="fl wrap first-block red-bg">
-				<div class="border0 p-0 m-0 red-bg"><h1>Warning!</h1></div>
-				<div class="download-page p-0 m-0 red-bg">Unfortunately, servers with VAC protection are not supported. Use the "-insecure" launch parameter when starting the game!</div>
+			<div class="fl wrap first-block">
+				<div class="border0 p-0 m-0"><h1>Instructions</h1></div>
+				<div class="download-page p-0 m-0">After unpacking the game, open Steam. At the bottom, click the button "Add a Game" > "Add a Non-Steam Game..." > "Browse...". In the pop-up window, select "csgo.exe" in the folder with the unpacked game and click "Add Selected Programs". After that, in the Steam library, right-click on the third-party game "csgo" > "Properties". Enter "-steam" in the launch parameters.</div>
 			</div>
 		</div>
 		<div class="fl fl-col align-center w-100 h-100">
