--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</header>
 	<main class="fl fl-col align-center">
 		<div class="fl fl-col align-center w-100 h-100">
-			<div class="fl first-block"><center><p>As you know, Counter-Strike 2 was released on September 28, 2023. However, Counter-Strike 2 was released as an update for Counter-Strike: Global Offensive. Because of this, it can be understood that Counter Striak: Global Offensive is officially dead<b> <u>(but not for the fans!)</u></b></p></center></div>
+			<div class="fl first-block"><center><p>As you know, Counter-Strike 2 was released on September 28, 2023. However, Counter-Strike 2 was released as an update for Counter-Strike: Global Offensive. Because of this, it can be understood that Counter-Strike: Global Offensive is officially dead<b> <u>(but not for the fans!)</u></b></p></center></div>
 		</div>
 		<div class="fl fl-col align-center w-100 h-100">
 			<div><center>Here you can download the latest version of Counter-Strike: Global Offensive.</center></div>
