--- a/download/index.html
+++ b/download/index.html
@@ -23,6 +23,7 @@
 			<div class="fl wrap first-block">
 				<div class="download-page p-0 m-0"><p><i>Name:</i> Counter-Strike: Global Offensive</p></div>
 				<div class="download-page p-0 m-0"><p><i>Description:</i> This build includes all updates until September 27, 2023 inclusive.</p></div>
+				<div class="download-page p-0 m-0"><p><i>Size:</i> 30,8 GB</p></div>
 				<div class="download-page p-0 m-0"><p><i>Date of download:</i> 09.29.2023 21:20</p></div>
 			</div>
 			<div class="fl wrap first-block">
