installed font arial
now this look better, lol

--- a/download/index.html
+++ b/download/index.html
@@ -28,7 +28,7 @@
 			</div>
 			<div class="fl wrap first-block">
 				<div class="border0 p-0 m-0"><h1>Instructions</h1></div>
-				<div class="download-page p-0 m-0">After unpacking the game, open Steam. At the bottom, click the button "Add a Game" > "Add a Non-Steam Game..." > "Browse...". In the pop-up window, select "csgo.exe" in the folder with the unpacked game and click "Add Selected Programs". After that, in the Steam library, right-click on the third-party game "csgo" > "Properties". Enter "-steam" in the launch parameters.</div>
+				<div class="download-page p-0 m-0"><p>After unpacking the game, open Steam. At the bottom, click the button "Add a Game" > "Add a Non-Steam Game..." > "Browse...". In the pop-up window, select "csgo.exe" in the folder with the unpacked game and click "Add Selected Programs". After that, in the Steam library, right-click on the third-party game "csgo" > "Properties". Enter "-steam" in the launch parameters.</p></div>
 			</div>
 		</div>
 		<div class="fl fl-col align-center w-100 h-100">
