--- a/download/index.html
+++ b/download/index.html
@@ -22,10 +22,10 @@
 		<div class="fl fl-col align-center w-100 h-100">
 			<div class="fl wrap first-block">
 				<div class="download-page p-0 m-0"><p><i>Name:</i> Counter-Strike: Global Offensive</p></div>
-				<div class="download-page p-0 m-0"><p><i>Version:</i> -</p></div>
+				<div class="download-page p-0 m-0"><p><i>Version:</i> 1.38.8.1</p></div>
 				<div class="download-page p-0 m-0"><p><i>Description:</i> This build includes all updates until October 26, 2023 inclusive.</p></div>
-				<div class="download-page p-0 m-0"><p><i>Size:</i> - GB</p></div>
-				<div class="download-page p-0 m-0"><p><i>Date of download:</i> -</p></div>
+				<div class="download-page p-0 m-0"><p><i>Size:</i> 30,8 GB</p></div>
+				<div class="download-page p-0 m-0"><p><i>Date of download:</i> 10.26.2023 2:46</p></div>
 			</div>
 			<div class="fl wrap first-block">
 				<div class="border0 p-0 m-0"><h1>Instructions</h1></div>
@@ -35,8 +35,8 @@
 			</div>
 		</div>
 		<div class="fl fl-col align-center w-100 h-100">
-			<a class="download-torrent_button" href="#"><center><b><del>Download torrent</del></b> (temporarily unavailable)</center></a>
-			<a class="m-0 download-magnet_button" href="#"><center><b><del>Magnet URL</del></b> (temporarily unavailable)</center></a>
+			<a class="download-torrent_button" href="../torrents/csgo.torrent"><center><b>Download torrent</b></center></a>
+			<a class="m-0 download-magnet_button" href="magnet:?xt=urn:btih:40f1c4389992ff683750d100e638e8948703e719&dn=Counter-Strike%20Global%20Offensive&tr=udp%3a%2f%2fprivate.anonseed.com%3a6969%2fannounce&tr=udp%3a%2f%2fepider.me%3a6969%2fannounce&tr=udp%3a%2f%2ftamas3.ynh.fr%3a6969%2fannounce&tr=https%3a%2f%2ftracker.loligirl.cn%3a443%2fannounce&tr=udp%3a%2f%2ftracker.fnix.net%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.tryhackx.org%3a6969%2fannounce&tr=udp%3a%2f%2flloria.fr%3a6969%2fannounce&tr=udp%3a%2f%2faarsen.me%3a6969%2fannounce&tr=udp%3a%2f%2fmail.segso.net%3a6969%2fannounce&tr=udp%3a%2f%2f6ahddutb1ucc3cp.ru%3a6969%2fannounce&tr=https%3a%2f%2ftracker.lilithraws.org%3a443%2fannounce&tr=udp%3a%2f%2ftracker.dler.com%3a6969%2fannounce&tr=udp%3a%2f%2facxx.de%3a6969%2fannounce&tr=udp%3a%2f%2fmoonburrow.club%3a6969%2fannounce&tr=udp%3a%2f%2fthouvenin.cloud%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.opentrackr.org%3a1337%2fannounce&tr=udp%3a%2f%2ftracker.t-rb.org%3a6969%2fannounce&tr=http%3a%2f%2ftracker.mywaifu.best%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.ccp.ovh%3a6969%2fannounce&tr=udp%3a%2f%2foh.fuuuuuck.com%3a6969%2fannounce&tr=udp%3a%2f%2fbt1.archive.org%3a6969%2fannounce&tr=udp%3a%2f%2fhtz3.noho.st%3a6969%2fannounce&tr=udp%3a%2f%2fyahor.of.by%3a6969%2fannounce&tr=udp%3a%2f%2fopen.dstud.io%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.0x7c0.com%3a6969%2fannounce&tr=udp%3a%2f%2ffree.publictracker.xyz%3a6969%2fannounce&tr=https%3a%2f%2fwww.peckservers.com%3a9443%2fannounce&tr=udp%3a%2f%2ftracker.therarbg.com%3a6969%2fannounce&tr=udp%3a%2f%2fz.paranoid.agency%3a6969%2fannounce&tr=udp%3a%2f%2fu4.trakx.crim.ist%3a1337%2fannounce&tr=udp%3a%2f%2f6.pocketnet.app%3a6969%2fannounce"><center><b>Magnet URL</b></center></a>
 		</div>
 	</main>
 </body>
