some site update
News:
+ now the dates in the news are in a more understandable form,
+ added publication time,
+ last post date corrected.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="fl first-block"><center><p>As you know, Counter-Strike 2 was released on September 28, 2023. However, Counter-Strike 2 was released as an update for Counter-Strike: Global Offensive. Because of this, it can be understood that Counter-Strike: Global Offensive is officially dead<b> <u>(but not for the fans!)</u></b></p></center></div>
 		</div>
 		<div class="fl fl-col align-center w-100 h-100">
-			<div><center>Here you can download the latest version of Counter-Strike: Global Offensive.</center></div>
+			<div><center><p>Here you can download the latest version of Counter-Strike: Global Offensive.</p></center></div>
 		</div>
 		<div class="fl fl-col align-center w-100 h-100">
 			<a class="download-button" href="./download"><center><b>Download</b></center></a>
